--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "gourmetgo-backend",
+  "name": "appservidor",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.19.2"
-  },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "firebase": "^10.7.0",
+    "firebase-admin": "^11.11.1",
+    "mysql": "^2.18.1"
   }
 }
