--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "license": "ISC",
   "devDependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "firebase": "^10.7.0",
     "firebase-admin": "^11.11.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.9.13",
+    "postmark": "^4.0.2"
   }
 }
