--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@sendgrid/mail": "^8.1.3",
     "firebase": "^10.7.0",
     "firebase-admin": "^11.11.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.10.0",
     "nodemailer": "^6.9.13",
     "postmark": "^4.0.2"
   }
